--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ audio {
 }
 
 .img-container {
+  max-width: 500px;
   width: 100%;
   background: url("https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExdno3YnVzMW1vOThxM3QyOGZiYmJrMHlkMHAzYWdxNXFwejYxY2ZvZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wWue0rCDOphOE/giphy.gif");
   background-position: center;
